<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Crear_Cuenta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtEmailC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"


                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/EmailCrear"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ContraCuenta"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtConfirmacionContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ConfirmacionContra"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnResgistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registrar"

                android:hint="@string/registrar"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:hint="@string/cancelarC"
                android:text="Cancelar" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>