<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="726dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"

                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnIniciaS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:hint="@string/IniciaS"
                android:text="Inicio Sesión" />

            <Button
                android:id="@+id/btnCrearC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:hint="@string/CrearC"
                android:text="Crear Cuenta" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>